fixed a bug with not showing proper filter count

--- a/Tombolo/client-reactjs/src/components/application/jobMonitoring/jobMonitoring.css
+++ b/Tombolo/client-reactjs/src/components/application/jobMonitoring/jobMonitoring.css
@@ -132,4 +132,5 @@
   justify-content: right;
   color: var(--primary);
   background: none;
+  font-weight: 600;
 }
